Add mapping and configurations

--- a/CounThings/appsettings.json
+++ b/CounThings/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
 
   "DbContextSettings": {
-    "ConnectionString": "User ID=admin;Password=CounThings;Host=CounThings;Pooling=true;"
+
+    "ConnectionString": "Server=localhost;Port=5432;Database=CounThings;User Id=admin;Password=CounThings;"
   }
 }
